# zUtilities

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  zUtilities.sln
.github/workflows/: msbuild.yml
cmake/: target_add_versioninfo.cmake  version.rc.in
dependencies/: CMakeLists.txt
dependencies/union/: CMakeLists.txt
dependencies/union/gothic-userapi/: oCItem.inl  oCNpc.inl  zCArchiver.inl  zCOption.inl  zCVob.inl  zCVobLight.inl
src/: Plugin.cpp  Plugin.hpp  QuickSave.h  Sources.h
src/classes/IconInfo/: IconInfo.h  IconInfo.hpp
src/classes/Options/: Options.h  Options.hpp
src/classes/SaveLoadGameInfo/: SaveLoadGameInfo.h
src/classes/StatusBar/: StatusBar.h  StatusBar.hpp
src/features/Commands/: Commands.hpp
src/features/DamagePopup/: DamagePopup.h  DamagePopup.hpp
src/features/DebugHelper/: DebugHelper.h  DebugHelper.hpp
src/features/Dialogue/: Dialogue.hpp
src/features/FocusColor/: FocusColor.h  FocusColor.hpp
src/utils/: Archive.hpp  Colors.h  Const.h  Extensions.h  KeyCode.h  Misc.hpp  Options.h  PlayerHelper.h  Randomizer.h  User.hpp
zUtilities/: .build_settings.inl  Archive.cpp  Colors.h  Commands.cpp  Const.h  DamageMaskHelper.cpp  DamageMaskHelper.h  DamagePopup.cpp  DamagePopup.h  DebugHelper.cpp  DebugHelper.h  Dialogue.cpp  DllMain.cpp  Extensions.h  FocusColor.cpp  FocusColor.h  FocusStatusBar.cpp  FocusStatusBar.h  Headers.h  HealthStatusBar.cpp  HealthStatusBar.h  Hello.cpp  IconInfo.cpp  IconInfo.h  Interface.cpp  Inventory.cpp  ItemLabel.cpp  ItemLabel.h  KeyCode.h  Lockable.cpp  LogBook.cpp  LogBook.h  ManaStatusBar.cpp  ManaStatusBar.h  Meatbug.cpp  Misc.cpp  NoGrass.cpp  NoGrass.h  NpcHelper.cpp  NpcHelper.h  (+27 more)
zUtilities/ZenGin/: zGothicAPI.h
(+1628 files in other folders)
